:bug: Made the vh higher on mobile so that it doesn't crop colin's head.

--- a/assets/src/sass/components/_main.scss
+++ b/assets/src/sass/components/_main.scss
@@ -65,7 +65,7 @@ canvas {
 }
 
 .img-cards {
-  height: 30vh;
+  height: 35vh;
 }
 
 @media screen and (min-width: 40em) {
